--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,11 @@ services:
       - JD_VNC_PASSWORD=changeme
       - JD_UID=1000
       - JD_GID=1000
+    privileged: true
+# For refence, using the config below in leiu of 'priveleged: true' (above) on an
+# ubuntu docker host did NOT allow the fuse device to mount properly. 
+#    devices:
+#      - /dev/fuse
+#    cap_add:
+#      - SYS_ADMIN
+    
